# micropyome

./: .gitignore  README.md  pyproject.toml  readme.rst  requirements.txt
data/averill/: readme.rst
data/averill/bacteria/: r2_published_results.csv
data/averill/bacteria/class/: 05_variables.csv  15_variables.csv  observed.csv  predicted.csv  y_11groupTaxo.csv
data/averill/bacteria/family/: 05_variables.csv  15_variables.csv  observed.csv  predicted.csv  y_11groupTaxo.csv
data/averill/bacteria/fg/: 15_variables.csv  observed.csv  predicted.csv
data/averill/bacteria/genus/: 05_variables.csv  15_variables.csv  observed.csv  predicted.csv  y_11groupTaxo.csv
data/averill/bacteria/order/: 05_variables.csv  15_variables.csv  (+3 more)
data/averill/fungi/: r2_results.csv  r2_results_Compared_Study.csv
data/neon/: readme.rst
data/neon/bacteria/: var_sd_sorted.csv  var_sorted.csv
demos/: autoencoder.ipynb  averill_fungi.eps  databases.ipynb  datasets.ipynb  frequencies.ipynb  fungi_regression.py  graphs.ipynb  legeay.ipynb  logit.ipynb  neon_bacteria_autocorrelation.eps  neon_data.ipynb  neon_fungi.eps  pure_regression.ipynb  regressions.ipynb  transfer_learning.ipynb
docs/: conf.py  index.rst  literature_review.rst  references.bib  source-code-documentation.rst
micropyome/: __init__.py
micropyome/databases/: __init__.py  bacteria.py
micropyome/datasets/: __init__.py  bacteria.py  neon.py
micropyome/taxa/: __init__.py  regression.py
micropyome/utils/: __init__.py  file_io.py  log.py
tests/: test_databases.py  test_datasets.py  test_taxa_regression.py
(+95 files in other folders)
