[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micropyome"
version = "0.0.1"
authors = [
  { name="Vincent Therrien", email="therrien.vincent.2@courrier.uqam.ca" },
]
description = "Microbiome analysis toolbox"
readme = "readme.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
keywords = ["microbiome", "taxons", "machine learning"]

[tool.setuptools]
packages = ["micropyome", "micropyome.databases", "micropyome.utils"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/Vincent-Therrien/micropyome"
"repository" = "https://github.com/Vincent-Therrien/micropyome"